# Repo-Searcher

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh  start_docker.sh
backend/: README.md  main.py  pyproject.toml  requirements.txt  start.sh
backend/app/: config.py  main.py
backend/app/api/: graph.py  lora.py  repos.py  search.py  ws.py
backend/app/indexer/: bm25_builder.py  callgraph_builder.py  cloner.py  orchestrator.py  parser.py  store.py  vector_builder.py
backend/app/ml/: lora_data_generator.py  lora_registry.py  lora_trainer.py  model_manager.py  unixcoder.py
backend/app/models/: graph.py  repo.py  search.py
backend/app/search/: graph_expander.py  graph_mcts.py  hybrid_retriever.py  mcts_rewriter.py  query_expander.py  reranker.py
benchmark/: EXPERIMENT_REPORT.md  GRAPH_EXPANSION_REPORT.md  LORA_REWRITER_EXPERIMENT_REPORT.md  clone_and_index.py  config.py  evaluator.py  extract_samples.py  frontier_experiments.py  graph_expansion_experiment.py  patch_parser.py  query_cleaner.py  retrievers.py  run_benchmark.py  run_lora_benchmark.py  visualize.py
benchmark/lora_training/: prepare_data.py  train_scorer.py
benchmark/lora_training/output/rewriter_lora_v2/: README.md
benchmark/lora_training/output/rewriter_lora_v2/final/: README.md  adapter_config.json  adapter_model.safetensors  tokenizer.json  tokenizer_config.json
benchmark/lora_training/output/scorer_lora/: README.md
benchmark/lora_training/output/scorer_lora/checkpoint-63/: scheduler.pt  tokenizer_config.json  trainer_state.json
benchmark/lora_training/output/scorer_lora/final/: adapter_config.json
benchmark/lora_training/query_rewriter/: DATASET_EXAMPLES.md  evaluate.py  evaluate_v3.py  llm_client.py  prepare_data.py  prepare_data_v3.py  train.py
frontend/: README.md  package-lock.json  package.json  start.sh
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: CallGraphPanel.tsx  CodeBlock.tsx  CodeSearchBar.tsx  IndexingProgress.tsx  Layout.tsx  LoRATrainingPanel.tsx  MCTSTreePanel.tsx  RepoCard.tsx  RepoSearchBar.tsx  SearchResultCard.tsx  SearchResultList.tsx
frontend/src/hooks/: useCodeSearch.ts  useIndexingProgress.ts  useLoRATraining.ts  useRepoSearch.ts
frontend/src/pages/: HomePage.tsx  RepoPage.tsx
frontend/src/services/: api.ts  graphService.ts  loraService.ts  repoService.ts  searchService.ts
frontend/src/types/: index.ts
