[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "pydantic-settings>=2.13.1",
    "pygit2>=1.19.1",
    "rank-bm25>=0.2.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "peft>=0.18.1",
    "websockets>=16.0",
    "uvicorn[standard]>=0.42.0",
    "datasets>=4.8.4",
    "trl>=0.29.1",
]


[project.optional-dependencies]
cpu = ["torch>=2.10.0"]
cu126 = ["torch>=2.10.0"]
cu128 = ["torch>=2.10.0"]
cu130 = ["torch>=2.10.0"]

[tool.uv]
torch-backend = "auto"
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu126" },
        { extra = "cu128" },
        { extra = "cu130" },
    ],
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
    { index = "pytorch-cpu", extra = "cpu" },
]
